src/sphinxdocrs/tests/snapshots/quickstart__quickstart_tree_snapshot-4.snap
---
source: src/sphinxdocrs/tests/quickstart.rs
expression: list_tree(tmp.path())
---
- Makefile
- build
- make.bat
- source
- source/_static
- source/_templates
- source/conf.py
- source/index.rst
