src/sphinxdocrs/tests/snapshots/quickstart__quickstart_tree_snapshot@flat_make.snap
---
source: src/sphinxdocrs/tests/quickstart.rs
expression: list_tree(tmp.path())
---
- Makefile
- _build
- _static
- _templates
- conf.py
- index.rst
- make.bat
