src/sphinxdocrs/tests/snapshots/quickstart__quickstart_tree_snapshot@no-makefile_no-batchfile.snap
---
source: src/sphinxdocrs/tests/quickstart.rs
expression: list_tree(tmp.path())
---
- _build
- _static
- _templates
- conf.py
- index.rst
